# manga-translator

./: .gitignore  Dockerfile  notes.txt  pyproject.toml  requirements.txt
scripts/: train.py
train_configs/: train_detect.yaml
translator/translators/: openai.py
