[tool.poetry]
name = "manga-translator"
version = "0.1.0"
description = ""
authors = ["Tare Ebelo <75279482+TareHimself@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
# torch = { version = "2.0.1", source="torch"}
# torchvision = { version = "0.15.2", source="torch"}
ultralytics = "^8.0.118"
pillow = "^9.5.0"
pyhyphen = "^4.0.3"
google-cloud-translate = "^3.11.1"
mss = "^9.0.1"
manga-ocr = "^0.1.10"
largestinteriorrectangle = "^0.2.0"
sentencepiece = "^0.1.99"
tornado = "^6.3.2"
easyocr = "^1.7.0"
pytesseract = "^0.3.10"
pycountry = "^22.3.5"
opencv-python = "^4.8.0.74"
pysimplegui = "^4.60.5"
timm = "^0.9.2"
Faker = "^19.1.0"
roboflow = "^1.1.3"

# [[tool.poetry.source]]
# name = "torch"
# url = "https://download.pytorch.org/whl/cu117"
# secondary = true
torch = "^2.1.0"


[tool.poetry.dev-dependencies]
poethepoet = "^0.20.0"

[tool.poe.tasks]
uninstall-torch = "python -m pip uninstall -y torch torchvision"
install-torch-cuda = "python -m pip install torch==2.0.0 torchvision --index-url https://download.pytorch.org/whl/cu117"
build-ui = "npm install && npm run build"
run-server = "python server.py"
force-cuda = ["uninstall-torch","install-torch-cuda"]
build-docker = "docker build -f Dockerfile . -t tarehimself/manga-translator"
run-docker = "docker run --gpus all -p 5000:5000 tarehimself/manga-translator"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"